@@ -5,7 +5,7 @@ Author: various authors
 Maintainer: Mike Miller <mtmiller@octave.org>
 Title: Signal Processing.
 Description: Signal processing tools, including filtering, windowing and display functions.
-Depends: octave (>= 3.8.0), control (>= 2.4.5), general (>= 1.3.2)
+Depends: octave (>= 3.8.0), control (>= 2.4.5)
 Autoload: no
 License: GPLv3+, public domain
 Url: http://octave.sf.net
